--- a/index.html
+++ b/index.html
@@ -783,6 +783,7 @@
             </div>
             <div class="row mt-4">
               <div class="col-12">
+                <p>APP LINK: https://airbnb-price-calculator-lrcsegvec2kpavpc9fywha.streamlit.app/</p>
                 <p>
                   "Smart Pricing: The Airbnb Rental Advisor" introduces a cutting-edge tool designed to assist property owners in setting competitive Airbnb rental prices across ten popular European cities, including Amsterdam, Paris, and Rome. Built with Streamlit, the application combines a user-friendly interface with a robust Random Forest regression model to provide tailored rental price predictions based on user input.
 
@@ -836,27 +837,17 @@
             <div class="row mt-4">
               <div class="col-12">
                 <p>
-                  "Intelligent Movie Recommendations" is a project focused on creating an advanced recommendation system that delivers highly personalized movie suggestions. Leveraging the extensive MovieLens dataset and supplementary metadata from the OMDB API, the system enhances user experience by incorporating nuanced details such as genres, cast, ratings, and plot summaries.
+                  The Movie Recommendation System is a comprehensive project developed as part of a BSc in Computing with AI/ML at TU Dublin, Tallaght Campus. This project showcases the ability to integrate machine learning, data engineering, and web application development into a cohesive, user-centric solution.</p>
 
-                  The project is under development and centers on the following components:
+                <p>The system addresses the challenge of finding personalized movie suggestions by leveraging a content-based approach. It utilizes the MovieLens dataset as its foundation, which is further enriched with metadata from the OMDb API. This enrichment process adds essential attributes like ratings, genres, plot descriptions, and poster URLs, ensuring the data's quality and relevance. Rigorous preprocessing was performed to clean, normalize, and structure the dataset, providing a robust base for the recommendation engine.
                 </p>
-                <ul>
-                  <li>Data Integration: Combining MovieLens user ratings with enriched movie metadata from OMDB. This integration provides a richer dataset for analysis and recommendation generation.
-                  <li>Recommendation Algorithms: Implementing collaborative filtering (user-based and item-based approaches) alongside content-based filtering to cater to diverse user preferences. Hybrid models are being explored to improve accuracy and relevance.
-                  <li>Interactive User Interface: Designing an accessible interface that allows users to rate movies, view tailored recommendations, and explore related films with detailed insights from OMDB.
-                  <li>Dynamic Features: Enhancing recommendations by considering additional factors such as release year, director influence, and user mood preferences.
-                </ul>
-                <p>
-                  Key Goals and Future Enhancements:
+                <p>The recommendation engine itself employs TF-IDF vectorization and cosine similarity to rank movies based on their relevance to user preferences. By dynamically calculating similarities, the system delivers precise and relevant suggestions. Users can refine these recommendations through an intuitive and interactive web application built with Streamlit. The application allows users to explore and select movies, apply filters by genre, year, or IMDb score, and view personalized recommendations complete with detailed metadata and visuals like movie posters.
                 </p>
-                <ul>
-                  <li>Accuracy: Fine-tuning algorithms to ensure precise and meaningful recommendations.
-                  <li>Scalability: Expanding the system to accommodate large datasets and new users efficiently.
-                  <li>Personalization: Incorporating advanced user profiling for more tailored suggestions.
-                  <li>Additional Data Sources: Integrating other APIs or datasets to provide broader recommendations, including trending titles and niche genres.
-                </ul>
-                <p>
-                  By combining robust datasets and intelligent filtering techniques, this project seeks to redefine how users discover movies, fostering a deeper connection with cinema tailored to their tastes.
+                <p>Evaluation of the system demonstrated its effectiveness, with a high precision of 0.7 in the top recommendations, scalability for datasets with thousands of entries, and an efficient runtime. Challenges such as inconsistent external data, API rate limits, and diversity in recommendations were successfully addressed through robust preprocessing, error handling, and strategic averaging across user selections.
+                </p>
+                <p>Future enhancements for the system include the integration of hybrid recommendation techniques combining collaborative and content-based filtering, the use of advanced NLP models like BERT for deeper semantic analysis, and features such as user authentication for personalized profiles. Additionally, expanding the dataset with richer attributes like director, actor, and streaming platform availability is planned to further improve the system's versatility.
+                </p>
+                <p>This project is a clear demonstration of practical problem-solving in the domain of personalized recommendations, emphasizing machine learning, data handling, and user-centric design principles.
                 </p>
               </div>
             </div>
@@ -883,7 +874,7 @@
                 <img src="img/project4-detail1.png" class="img-fluid rounded shadow" alt="Project 1 Image 1">
               </div>
               <div class="col-md-6">
-                <img src="img/project4-detail2.png" class="img-fluid rounded shadow" alt="Project 1 Image 2">
+                <img src="img/feria.jpg" class="img-fluid rounded shadow" alt="Project 1 Image 2">
               </div>
             </div>
             <div class="row mt-4">
