modify html, text from project 3

--- a/index.html
+++ b/index.html
@@ -836,6 +836,7 @@
             </div>
             <div class="row mt-4">
               <div class="col-12">
+                <p>APP LINK: https://movie-recommendation-system-svtgpgmbmqdeykq8mpl3fj.streamlit.app/</p>
                 <p>
                   The Movie Recommendation System is a comprehensive project developed as part of a BSc in Computing with AI/ML at TU Dublin, Tallaght Campus. This project showcases the ability to integrate machine learning, data engineering, and web application development into a cohesive, user-centric solution.</p>
 
