--- a/index.html
+++ b/index.html
@@ -205,16 +205,48 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td>Mathematics</td>
-                        <td>8.5</td>
+                        <td>Análisis exploratorio de datos</td>
+                        <td>7.5</td>
                       </tr>
                       <tr>
-                        <td>Physics</td>
-                        <td>7.5</td>
+                        <td>Análisis matemático</td>
+                        <td>8.2</td>
+                      </tr>
+                      <tr>
+                        <td>Fundamentos de computadoras y sistemas</td>
+                        <td>8.1</td>
+                      </tr>
+                      <tr>
+                        <td>Fundamentos de organización de empresas</td>
+                        <td>8.4</td>
+                      </tr>
+                      <tr>
+                        <td>Fundamentos de programación</td>
+                        <td>8.1</td>
+                      </tr>
+                      <tr>
+                        <td>Matemática discreta</td>
+                        <td>9.5 (M.H)</td>
+                      </tr>
+                      <tr>
+                        <td>Modelos estadísticos para la toma de decisiones I</td>
+                        <td>8.2</td>
+                      </tr>
+                      <tr>
+                        <td>programación</td>
+                        <td>7.7</td>
+                      </tr>
+                      <tr>
+                        <td>Proyecto I, comprensión de datos</td>
+                        <td>9</td>
+                      </tr>
+                      <tr>
+                        <td>Álgebra Lineal</td>
+                        <td>8.9</td>
                       </tr>
                     </tbody>
                   </table>
-                  <p><strong>Average Grade:</strong> <span id="highSchoolAvg">8.17</span></p>
+                  <p><strong>Average Grade:</strong> <span id="highSchoolAvg">8.36</span></p>
                 </div>
 
                 <div id="secondYearGrades" style="display:none;">
@@ -227,16 +259,48 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td>Mathematics</td>
-                        <td>9.0</td>
+                        <td>Adquisición y transmisión de datos</td>
+                        <td>7.5</td>
                       </tr>
                       <tr>
-                        <td>Physics</td>
-                        <td>8.0</td>
+                        <td>Bases de datos</td>
+                        <td>8.4</td>
+                      </tr>
+                      <tr>
+                        <td>Comportamiento económico y social</td>
+                        <td>8</td>
+                      </tr>
+                      <tr>
+                        <td>Estructuras de datos</td>
+                        <td>8.1</td>
+                      </tr>
+                      <tr>
+                        <td>Gestión de datos</td>
+                        <td>8.2</td>
+                      </tr>
+                      <tr>
+                        <td>Modelado discreto y teoría de la información</td>
+                        <td>8.4</td>
+                      </tr>
+                      <tr>
+                        <td>Modelos descriptivos y predictivos I</td>
+                        <td>7.5</td>
+                      </tr>
+                      <tr>
+                        <td>Modelos estadísticos para la toma de decisiones II</td>
+                        <td>7.7</td>
+                      </tr>
+                      <tr>
+                        <td>Proyecto II, integración y preparación de datos</td>
+                        <td>8.8</td>
+                      </tr>
+                      <tr>
+                        <td>Seguridad de los datos</td>
+                        <td>6.7</td>
                       </tr>
                     </tbody>
                   </table>
-                  <p><strong>Average Grade:</strong> <span id="highSchoolAvg">8.17</span></p>
+                  <p><strong>Average Grade:</strong> <span id="highSchoolAvg">7.93</span></p>
                 </div>
 
                 <div id="thirdYearGrades" style="display:none;">
@@ -249,16 +313,48 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td>Mathematics</td>
+                        <td>Algorítmica</td>
+                        <td>7.2</td>
+                      </tr>
+                      <tr>
+                        <td>Economía digital</td>
+                        <td>7.4</td>
+                      </tr>
+                      <tr>
+                        <td>Evaluación, despliegue y monitorización de modelos</td>
+                        <td>8.8</td>
+                      </tr>
+                      <tr>
+                        <td>Infraesructura para el procesamiento de datos</td>
+                        <td>7.8</td>
+                      </tr>
+                      <tr>
+                        <td>Lenguaje natural y recuperación de la información</td>
+                        <td>7.5</td>
+                      </tr>
+                      <tr>
+                        <td>Modelado y simulación continuos</td>
+                        <td>6.9</td>
+                      </tr>
+                      <tr>
+                        <td>Modelos descriptivos y predictivos II</td>
+                        <td>8.3</td>
+                      </tr>
+                      <tr>
+                        <td>Proyecto III, análisis de datos</td>
                         <td>9.5</td>
                       </tr>
                       <tr>
-                        <td>Physics</td>
-                        <td>8.5</td>
+                        <td>Representación del conocimiento y razonamiento</td>
+                        <td>9</td>
+                      </tr>
+                      <tr>
+                        <td>Visualización</td>
+                        <td>8.3</td>
                       </tr>
                     </tbody>
                   </table>
-                  <p><strong>Average Grade:</strong> <span id="highSchoolAvg">8.17</span></p>
+                  <p><strong>Average Grade:</strong> <span id="highSchoolAvg">8.07</span></p>
                 </div>
               </div>
             </div>
@@ -294,16 +390,32 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td>International Relations</td>
-                      <td>8</td>
+                      <td>Interactive Media Design</td>
+                      <td>TBA</td>
                     </tr>
                     <tr>
-                      <td>Global Economics</td>
-                      <td>9</td>
+                      <td>Social Media Analysis</td>
+                      <td>TBA</td>
+                    </tr>
+                    <tr>
+                      <td>Applied MAchine Learning</td>
+                      <td>TBA</td>
+                    </tr>
+                    <tr>
+                      <td>Security for the Cloud and IoT</td>
+                      <td>TBA</td>
+                    </tr>
+                    <tr>
+                      <td>DevOps</td>
+                      <td>TBA</td>
+                    </tr>
+                    <tr>
+                      <td>PROJECT</td>
+                      <td>TBA</td>
                     </tr>
                   </tbody>
                 </table>
-                <p><strong>Average Grade:</strong> <span id="erasmusAvg">8.5</span></p>
+                <p><strong>Average Grade:</strong> <span id="erasmusAvg">TBA</span></p>
               </div>
             </div>
           </div>
