--- a/index.html
+++ b/index.html
@@ -74,16 +74,7 @@
             <!-- Subtitle -->
             <p>Data Science Student</p>
 
-            <!-- Social Links -->
-            <div class="social-links">
-              <a href="https://www.twitter.com"><i class="bi bi-twitter-x"></i></a>
-              <a href="https://www.facebook.com"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.linkedin.com"><i class="bi bi-linkedin"></i></a>
-              <a href="https://www.github.com"><i class="bi bi-github"></i></a>
-
-
-            </div>
+            
           </div>
           <div class="col-lg-6 text-center">
             <img src="img/hero-bg.jpg" alt="Background Image" class="img-fluid hero-img">
@@ -1095,5 +1086,16 @@
   <div id="successMessage" class="alert alert-success mt-3 d-none">
     Your message has been sent successfully!
   </div>
+</div>
+-->
+<!-- Social Links 
+<div class="social-links">
+  <a href="https://www.twitter.com"><i class="bi bi-twitter-x"></i></a>
+  <a href="https://www.facebook.com"><i class="bi bi-facebook"></i></a>
+  <a href="https://www.instagram.com"><i class="bi bi-instagram"></i></a>
+  <a href="https://www.linkedin.com"><i class="bi bi-linkedin"></i></a>
+  <a href="https://www.github.com"><i class="bi bi-github"></i></a>
+
+
 </div>
 -->
