añadir botón cv

--- a/index.html
+++ b/index.html
@@ -74,14 +74,17 @@
             <!-- Subtitle -->
             <p>Data Science Student</p>
 
-            
+            <!-- Download CV Button -->
+            <a href="BraulioFenollosa_CV.pdf" download="Braulio_Fenollosa_CV" class="btn btn-primary mt-3">
+              Download CV
+            </a>
           </div>
           <div class="col-lg-6 text-center">
             <img src="img/hero-bg.jpg" alt="Background Image" class="img-fluid hero-img">
           </div>
         </div>
       </div>
-    </section><!-- /Hero Section -->
+      </section><!-- /Hero Section -->
 
     <section id="about" class="section">
       <div class="container">
