--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             </div>
           </div>
 
-          <!-- Skill 12 (Nuevo: DevOps) -->
+          <!-- Skill 12 -->
           <div class="col-md-6">
             <div class="skill-item">
               <div class="d-flex align-items-center">
@@ -662,7 +662,7 @@
             </div>
           </div>
 
-          <!-- Skill 13 (Nuevo: IoT) -->
+          <!-- Skill 13 -->
           <div class="col-md-6">
             <div class="skill-item">
               <div class="d-flex align-items-center">
@@ -678,7 +678,7 @@
             </div>
           </div>
 
-          <!-- Skill 14 (Nuevo: Security) -->
+          <!-- Skill 14 -->
           <div class="col-md-6">
             <div class="skill-item">
               <div class="d-flex align-items-center">
@@ -693,6 +693,38 @@
               </div>
             </div>
           </div>
+
+          <!-- Skill 15 (IA Generativa) -->
+        <div class="col-md-6">
+          <div class="skill-item">
+            <div class="d-flex align-items-center">
+              <i class="bi bi-robot me-3" style="font-size: 2rem;"></i> <!-- IA Generativa Icon -->
+              <div class="skill-info">
+                <p class="skill-name">Generative AI</p>
+                <p class="skill-percentage">85%</p>
+              </div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" style="width: 85%;"></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Skill 16 (Model Context Protocol) -->
+        <div class="col-md-6">
+          <div class="skill-item">
+            <div class="d-flex align-items-center">
+              <i class="bi bi-gear-wide-connected me-3" style="font-size: 2rem;"></i> <!-- MCP Icon -->
+              <div class="skill-info">
+                <p class="skill-name">Model Context Protocol (MCP)</p>
+                <p class="skill-percentage">80%</p>
+              </div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" style="width: 80%;"></div>
+            </div>
+          </div>
+        </div>
 
 
         </div>
