add CV file and update download link in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>Data Science Student</p>
 
             <!-- Download CV Button -->
-            <a href="BraulioFenollosa_CV.pdf" download="Braulio_Fenollosa_CV" class="btn_hero btn-primary mt-3">
+            <a href="CV_BraulioFenollosa.pdf" download="Braulio_Fenollosa_CV" class="btn_hero btn-primary mt-3">
               Download CV
             </a>
           </div>
