--- a/index.html
+++ b/index.html
@@ -912,10 +912,10 @@
           <!-- Project 7 -->
           <div class="col">
             <div class="card h-100">
-              <img src="img/project7.jpg" class="card-img-top" alt="Project 7">
+              <img src="img/pr7.jpg" class="card-img-top" alt="Project 7">
               <div class="card-body">
-                <h5 class="card-title">Depicting Randomness</h5>
-                <p class="card-text">This project investigates single-particle dynamics using advanced machine learning techniques to decode anomalous diffusion.</p>
+                <h5 class="card-title">AI Documentation Agent</h5>
+                <p class="card-text">Developed as my degree final project, an autonomous AI agent at Inditex designed to automate the generation of technical documentation by analyzing source code and repository metadata.</p>
               </div>
               <div class="card-footer text-center">
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#project7Modal">
@@ -1181,7 +1181,7 @@
           <div class="modal-body">
             <!-- Images and Description -->
             <div class="ratio ratio-16x9">
-              <video controls class="rounded shadow">
+              <video controls class="rounded shadow" preload="metadata">
                 <source src="img/kalman.mp4" type="video/mp4">
                 Tu navegador no soporta videos.
               </video>
@@ -1212,6 +1212,62 @@
       </div>
     </div>
 
+
+    <!-- Modal for Project 7 -->
+    <div class="modal fade" id="project7Modal" tabindex="-1" aria-labelledby="project7ModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg"> 
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="project7ModalLabel">Project Details</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <!-- Images and Description -->
+            <div id="project7Carousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item">
+                  <img src="img/proj7_1.png" class="d-block w-100 rounded shadow" alt="Project 7 Image 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/proj7_2.png" class="d-block w-100 rounded shadow" alt="Project 7  Image 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/proj7_3.png" class="d-block w-100 rounded shadow" alt="Project 7 Image 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/proj7_4.png" class="d-block w-100 rounded shadow" alt="Project 7  Image 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/proj7_5.png" class="d-block w-100 rounded shadow" alt="Project 7 Image 2">
+                </div>
+                <!-- Puedes agregar más imágenes aquí -->
+              </div>
+
+              <button class="carousel-control-prev" type="button" data-bs-target="#project7Carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#project7Carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </button>
+            </div>
+
+            <div class="row mt-4">
+              <div class="col-12">
+                <p>During my internship at Inditex within the AIDEV (Artificial Intelligence Development) team, I designed and implemented an autonomous AI agent focused on solving the persistent challenge of outdated technical documentation in large-scale software environments. 
+                  The core of the system is built on an orchestration layer using LangChain and LangGraph, which allows the agent to execute complex reasoning workflows and interact with code repositories dynamically. To achieve a deep understanding of the software's structure, the agent utilizes the Model Context Protocol (MCP) and Abstract Syntax Tree (AST) parsing to perform semantic analysis across various programming languages. 
+                  I conducted a comprehensive benchmarking study of several state-of-the-art Large Language Models, including GPT-4o, Claude 3.5 Sonnet, and Gemini, evaluating their performance based on context window efficiency, response latency, and the quality of the generated AsciiDoc content. The final implementation features a functional web interface developed with Streamlit, providing developers with a tool that automatically generates high-quality technical guides from repository data. 
+                  This solution offers a scalable framework that significantly reduces the manual workload for engineering teams while ensuring that documentation remains a reliable and accurate source of truth throughout the software development lifecycle.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 
     <section id="work" class="section">
       <div class="container">
