--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
           <!-- Project 7 -->
           <div class="col">
             <div class="card h-100">
-              <img src="img/pr7.jpg" class="card-img-top" alt="Project 7">
+              <img src="img/pr7.png" class="card-img-top" alt="Project 7">
               <div class="card-body">
                 <h5 class="card-title">AI Documentation Agent</h5>
                 <p class="card-text">Developed as my degree final project, an autonomous AI agent at Inditex designed to automate the generation of technical documentation by analyzing source code and repository metadata.</p>
@@ -1225,7 +1225,7 @@
             <!-- Images and Description -->
             <div id="project7Carousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item">
+                <div class="carousel-item active">
                   <img src="img/proj7_1.png" class="d-block w-100 rounded shadow" alt="Project 7 Image 2">
                 </div>
                 <div class="carousel-item">
@@ -1238,7 +1238,7 @@
                   <img src="img/proj7_4.png" class="d-block w-100 rounded shadow" alt="Project 7  Image 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/proj7_5.png" class="d-block w-100 rounded shadow" alt="Project 7 Image 2">
+                  <img src="img/proj7_5.png" >
                 </div>
                 <!-- Puedes agregar más imágenes aquí -->
               </div>
