--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,8 @@
         <!-- Second Work Experience -->
         <div class="row align-items-center mb-5">
           <div class="col-md-6 text-center">
-            <img src="img/inditex.png" alt="Inditex Job" class="img-fluid rounded">
+            <img src="img/inditex.jpg" alt="Inditex Job" class="img-fluid rounded">
+
             <h4 class="mt-3">AI Developer Intern</h4>
           </div>
           <div class="col-md-6">
@@ -1308,6 +1309,27 @@
             </p>
           </div>
         </div>
+        
+        <!-- Horizontal line -->
+        <hr class="work-divider">
+        <!-- First Work Experience -->
+        <div class="row align-items-center mb-5">
+          <div class="col-md-6 order-md-2 text-center">
+            <img src="img/vrain.jpg" alt="Tutor Job" class="img-fluid rounded">
+            <h4 class="mt-3">AI Researcher</h4>
+          </div>
+          <div class="col-md-6 order-md-1">
+            <p>
+              I collaborated with VRAIN (Valencia Research Institute for Artificial Intelligence) on a research European Union project (Hidden Project)
+              focused on developing a 3D vehicle detection and tracking system using KITTI data. The system fuses LiDAR and camera detections
+              with a Kalman filter to maintain stable trajectories under occlusions and missed detections. My role involved implementing the data fusion algorithms,
+              optimizing the Kalman filter parameters, and evaluating the system's performance on benchmark datasets. This project enhanced my skills in computer vision, sensor fusion,
+              state estimation, and real-time tracking, contributing to advancements in autonomous vehicle technology. 
+            </p>
+          </div>
+        </div>
+
+
         <!-- Horizontal line -->
         <hr class="work-divider">
         
